--- a/kadai06/styles.css
+++ b/kadai06/styles.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #f2f2f2;
+  background-color: #f5f5f5f5;
   padding: 20px;
   color: #333;
 }
