--- a/web2_oshizukan_3240366_近澤希優/css/style.css
+++ b/web2_oshizukan_3240366_近澤希優/css/style.css
@@ -37,8 +37,16 @@ ul {
   text-align: center;
   margin-bottom: 25px;
 }
+
+main {
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
 @media (max-width: 600px) {
   .card {
     width: 90%;
   }
+
 }
