--- a/web2_oshizukan_3240366_近澤希優/css/style.css
+++ b/web2_oshizukan_3240366_近澤希優/css/style.css
@@ -42,6 +42,7 @@ main {
   max-width: 700px;
   margin: 0 auto;
   padding: 20px;
+  text-align: center;
 }
 
 @media (max-width: 600px) {
@@ -50,3 +51,4 @@ main {
   }
 
 }
+
