--- a/web2_oshizukan_3240366_近澤希優/css/style.css
+++ b/web2_oshizukan_3240366_近澤希優/css/style.css
@@ -42,7 +42,9 @@ main {
   max-width: 700px;
   margin: 0 auto;
   padding: 20px;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (max-width: 600px) {
@@ -51,4 +53,5 @@ main {
   }
 
 }
+
 
