--- a/web2_oshizukan_3240366_近澤希優/css/style.css
+++ b/web2_oshizukan_3240366_近澤希優/css/style.css
@@ -27,8 +27,11 @@ nav a  {
   padding: 12px;
   transition: 0.3s;
 }
-.card img　　 {
+
+.card img {
   width: 100%;
+  height: auto;
+  display: block;
 }
 ul {
   padding-left: 20px;
@@ -44,6 +47,7 @@ ul {
   }
 
 }
+
 
 
 
